--- a/css/styles.css
+++ b/css/styles.css
@@ -165,10 +165,14 @@ button::before{
     margin-bottom: 45px;
 }
 
-.flags{
+.flag{
     background-color: #fff;
     border-radius: 5px;
     padding-bottom: 46px;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
     overflow: hidden;
+}
+
+.link{
+    display: block;
 }
