--- a/css/styles.css
+++ b/css/styles.css
@@ -102,13 +102,14 @@ p:not(:last-child){
 
 .header-container{
     display: flex;
+    padding-top: 24px;
+    padding-bottom: 24px;
     justify-content: space-between;
     align-items: center;
 }
 
 .container{
     width: 1320px;
-    height: 80px;
     padding-left: 20px;
     padding-right: 20px;
     margin-left: auto;
@@ -184,7 +185,7 @@ button::before{
 .flag{
     background-color: #fff;
     border-radius: 5px;
-    padding-bottom: 46px;
+    padding-bottom: 22px;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.0294384);
     overflow: hidden;
 }
@@ -194,5 +195,5 @@ button::before{
 }
 
 .info-country{
-    padding: 24px 0 0 24px;
+    padding: 24px;
 }
