--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,7 @@
     font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 300;
-    src: url('../fonts/nunito-sans-v6-latin-300.eot');
-    src: local(''),
+    src: url('../fonts/nunito-sans-v6-latin-300.eot'),
          url('../fonts/nunito-sans-v6-latin-300.eot?#iefix') format('embedded-opentype'), 
          url('../fonts/nunito-sans-v6-latin-300.woff2') format('woff2'), 
          url('../fonts/nunito-sans-v6-latin-300.woff') format('woff'), 
@@ -17,8 +16,7 @@
     font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/nunito-sans-v6-latin-regular.eot');
-    src: local(''),
+    src: url('../fonts/nunito-sans-v6-latin-regular.eot'),
          url('../fonts/nunito-sans-v6-latin-regular.eot?#iefix') format('embedded-opentype'), 
          url('../fonts/nunito-sans-v6-latin-regular.woff2') format('woff2'), 
          url('../fonts/nunito-sans-v6-latin-regular.woff') format('woff'), 
@@ -30,8 +28,7 @@
     font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/nunito-sans-v6-latin-600.eot');
-    src: local(''),
+    src: url('../fonts/nunito-sans-v6-latin-600.eot'),
          url('../fonts/nunito-sans-v6-latin-600.eot?#iefix') format('embedded-opentype'), 
          url('../fonts/nunito-sans-v6-latin-600.woff2') format('woff2'), 
          url('../fonts/nunito-sans-v6-latin-600.woff') format('woff'), 
@@ -43,8 +40,7 @@
     font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 800;
-    src: url('../fonts/nunito-sans-v6-latin-800.eot');
-    src: local(''),
+    src: url('../fonts/nunito-sans-v6-latin-800.eot'),
          url('../fonts/nunito-sans-v6-latin-800.eot?#iefix') format('embedded-opentype'), 
          url('../fonts/nunito-sans-v6-latin-800.woff2') format('woff2'), 
          url('../fonts/nunito-sans-v6-latin-800.woff') format('woff'), 
